# sacnlogger

./: .buildinfo  .dockerignore  .gitignore  CMakeLists.txt  README.md  config.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  vcpkg.json
.github/workflows/: build.yml  docs.yml  main.yml
cmake/: sACN.cmake  sdbus-cpp.cmake  yaml-cpp.cmake
doc/: .gitignore  CMakeLists.txt  conf.py  config.rst  index.rst  requirements.txt
include/: sacnlogger_share.h
include/sacnloggerlib/: AbbreviationMap.h  AddressOrHostname.h  Config.h  ConfigException.h  CrowLogHandler.h  CsvRow.h  DiskSpaceMonitor.h  Runner.h  SystemConfig.h  UniverseMonitor.h  WebServer.h
include/sacnloggerlib/SystemConfig/: NetworkConfig.h
install/: CMakeLists.txt
messages/: CMakeLists.txt  Config.fbs  flatc_ts_fixer.cpp
raspi/: CMakeLists.txt  Dockerfile  arm64-linux-gnu-crossbuild.cmake  build.options  compress_img.cmake  crossbuild_arm64.dockerfile  docker-compose.yaml  entrypoint.sh  rpi_imagegen.dockerfile
raspi/custom/config/: sacnlogger.cfg  sacnlogger_debug.cfg  sacnlogger_release.cfg
raspi/custom/device/sacnlogger-pi5/: post-build.sh
raspi/custom/device/sacnlogger-pi5/device/initramfs-tools/hooks/: overlay.sh
raspi/custom/device/sacnlogger-pi5/device/initramfs-tools/scripts/local-bottom/: fs.sh
raspi/custom/device/sacnlogger-pi5/device/rootfs-overlay/boot/firmware/: cmdline.txt  config.txt
raspi/custom/device/sacnlogger-pi5/device/rootfs-overlay/etc/udev/rules.d/: 80-sacnlogger.rules
raspi/custom/device/sacnlogger-pi5/device/rootfs-overlay/usr/local/lib/systemd/system/: media-sacnlogger-disk.mount  sacnlogger.service
raspi/custom/image/embedded_squashfs/: main.cfg.in  pre-image.sh  ro_assets.cfg.in  writer.sh
raspi/custom/meta/: base.yaml  build-tools.yaml  debstore-installer.yaml  readonly.yaml  slim-customisations.yaml  triggerhappy.yaml  tzdata.yaml
raspi/custom/profile/: sacnlogger  sacnlogger_debug  v8-svelte-sacnlogger
resources/schema/: sacnlogger.schema.json
resources/system_config/templates/: 01-eth0.network
src/: CMakeLists.txt  sacnlogger_config.h.in  sacnlogger_share.cpp
src/sacnlogger/: CMakeLists.txt  EtcPalLogHandler.cpp  EtcPalLogHandler.h  main.cpp  sacnlogger_install.cmake
src/sacnlogger_monitor/: CMakeLists.txt  main.cpp  sacnlogger-monitor.service  sacnlogger_monitor_install.cmake
src/sacnlogger_monitor/debian/: postinst  postrm
src/sacnloggerlib/: AbbreviationMap.cpp  AddressOrHostname.cpp  CMakeLists.txt  Config.cpp  CrowLogHandler.cpp  CsvRow.cpp  DiskSpaceMonitor.cpp  Runner.cpp  SystemConfig.cpp  UniverseMonitor.cpp  WebServer.cpp
src/sacnloggerlib/SystemConfig/: NetworkConfig.cpp
test/: CMakeLists.txt
test/sacnloggerlib/: AbbreviationMapTest.cpp  CMakeLists.txt  ConfigTest.cpp  CsvRowTest.cpp  FakeDbus.h  FileMatcher.h  SystemConfigTest.cpp  main.cpp
test/sacnloggerlib/resources/ConfigTest/: bad_univ.cfg  bad_univ.json  bad_univ.yaml  doubled_univ.cfg  doubled_univ.json  doubled_univ.yaml  five_univ.cfg  five_univ.json  five_univ.yaml  malformed.cfg  malformed.json  malformed.yaml  network_dhcp.json  network_static.json  one_univ.cfg  one_univ.json  one_univ.yaml  use_pap.cfg  use_pap.json  use_pap.yaml
test/sacnloggerlib/resources/SystemConfigTest/network/: dhcp-ntp.json  dhcp-ntp.network  dhcp-ntpstatic.json  dhcp-ntpstatic.network  dhcp.json  dhcp.network  lo.json  static-ntp.json  static-ntp.network  static.json  static.network
webui/: .gitignore  CMakeLists.txt  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vite.config.ts.in
webui/src/: App.scss  App.tsx  main.tsx  routes.ts
webui/src/assets/styles/: _content.scss
webui/src/common/: constants.ts  localStorage.ts  setPageTitle.ts  useFocus.ts  useHostHttp.ts  useOnNumberInputChange.ts
webui/src/common/components/: Loading.tsx
webui/src/config/: Config.scss  Config.tsx  ConfigTitle.tsx
webui/src/front/: Front.tsx
